# modern-lfsr

./: CMakeLists.txt  README.md  meson.build
include/mlfsr/: mlfsr.h
src/: mlfsr.c
